<?xml version="1.0"?>
<package format="2">
  <name>moveit_kinematics</name>
  <version>0.10.8</version>
  <description>Package for all inverse kinematics solvers in MoveIt!</description>

  <author email="dave@dav.ee">Dave Coleman</author>
  <author email="isucan@google.com">Ioan Sucan</author>
  <author email="robot.moveit@gmail.com">Sachin Chitta</author>

  <maintainer email="anasarrak@erlerobotics.com">Anas M'chichou</maintainer>
  <maintainer email="dave@dav.ee">Dave Coleman</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>

  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend version_gte="1.11.2">pluginlib</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>hrim_moveit_srvs</build_depend>
  <build_depend>hrim_moveit_msgs</build_depend>

  <!-- <run_depend>moveit_core</run_depend>
  <run_depend version_gte="1.11.2">pluginlib</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_kdl</run_depend>
  <run_depend>orocos_kdl</run_depend> -->
  <!-- <run_depend>roscpp</run_depend> -->

  <exec_depend>moveit_core</exec_depend>
  <exec_depend version_gte="1.11.2">pluginlib</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>hrim_moveit_srvs</exec_depend>
  <exec_depend>hrim_moveit_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/kdl_kinematics_plugin_description.xml"/>
    <moveit_core plugin="${prefix}/lma_kinematics_plugin_description.xml"/>
    <moveit_core plugin="${prefix}/srv_kinematics_plugin_description.xml"/>
    <moveit_core plugin="${prefix}/cached_ik_kinematics_plugin_description.xml"/>
  </export>

</package>
